--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<!-- This website was created by Boudhayan Gupta. Anyone who begs to differ will be treated with mockery and contempt -->
+
 <html>
 	<head>
 		<title>Old Wise | For Old Wise Souls Stuck In Young Unwise Bodies</title>
