--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 		<link rel="stylesheet" type="text/css" href="/css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
+
+		<meta name="description" content="It's new. It's revolutionary. And it makes you wise." />
 	</head>
 	<body>
 		<main>
@@ -61,7 +63,7 @@
 							<h2>Presenting <span id="oldwise">Old Wise<sup><small>TM</small></sup></span>, the world's first white deluxe nourishing hair colour cr&eacute;me. Now at only <span id="price">$899.<sup>99</sup></span>*</h2>
 							<h4>From the makers of Napalm and Gaddafi's Secret Sauce. Winner of multiple Teen Choice Awards. <a href="http://bit.ly/1hobeHL">Buy Now</a> at the low price of just $899.<sup>99</sup>* for a limited time only</h4>
 							<p>*Conditions Apply</p>
-							<p><small>May cause unwanted side effects including extreme extroversion in social situations, excessive religious devotion, increased libido, rabies and/or reduced nasal hair. Patent pending in Hawaii. No animals have been harmed yet in testing (probably)</small></p>
+							<p><small>May cause unwanted side effects including extreme extroversion in social situations, excessive religious devotion, increased libido, erectile dysfunction and/or reduced nasal hair. Patent pending in Hawaii. No animals have been harmed yet in testing (probably)</small></p>
 						</div>
 					</div>
 				</div>
