--- a/index.html
+++ b/index.html
@@ -1,76 +1,78 @@
 <!DOCTYPE html>
 
-<!-- This website was created by Boudhayan Gupta. Anyone who begs to differ will be treated with mockery and contempt -->
-
 <html>
 	<head>
-		<title>Old Wise | For Old Wise Souls Stuck In Young Unwise Bodies</title>
+		<title>I am Boudhayan Gupta</title>
+		<meta name="description" content="Boudhayan Gupta. Student, Developer, Explorer, Adventurer, Gastronome.">
+		
+		<link rel="stylesheet" type="text/css" href="/style/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic,700,700italic" />
+		<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" />
 
-		<link rel="stylesheet" type="text/css" href="/css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="/css/style.css" />
-
-		<meta name="description" content="It's new. It's revolutionary. And it makes you wise." />
+		<link rel="stylesheet" type="text/css" href="/style/style.css" />
 	</head>
 	<body>
-		<main>
-			<section id="slide-1" class="homeSlide">
-				<div class="bcg">
-					<div class="hsContainer">
-						<div class="hsContent">
-							<h2>Are you in your early teens</h2>
-							<h3>And tired of your boring black hair?</h2>
-						</div>
-					</div>
+		<section id="name">
+			<div class="inner">
+				<div class="left">
+					<h1>Hello there!</h1>
+					<p>My name is <strong>Boudhayan Gupta</strong></p>
 				</div>
-			</section>
-		 
-			<section id="slide-2">
-				<div class="bcg">
-					<div class="hsContainer">
-						<div class="hsContent">
-							<h2>Do you want to come off as</h2>
-							<h3>Wiser than you really are?</h3>
-						</div>
-					</div>
+				<div class="right">
+					<div id="name-image"></div>
 				</div>
-			</section>
+				<div class="clearfix">
+				</div>
+			</div>
+		</section>
 
-			<section id="slide-3">
-				<div class="bcg">
-					<div class="hsContainer">
-						<div class="hsContent">
-							<h2>Have you tried horn-rimmed glasses</h2>
-							<h3>And miserably failed?</h3>
-						</div>
-					</div>
-				</div>
-			</section>
+		<section id="wherefrom">
+			<div class="inner">
+				<h1><i class="fa fa-map-marker"></i><br />&nbsp; I'm from <a href="//en.wikipedia.org/wiki/Kolkata">Kolkata, India</a></h1>
+			</div>
+		</section>
+		
+		<section id="whatdo">
+			<div class="inner">
+				<h1>I am many things</h1>
+				<p>Student, Developer, Explorer, Adventurer, Gastronome</p>
+			</div>
+		</section>
 
-			<section id="slide-4">
-				<div class="bcg">
-					<div class="hsContainer">
-						<div class="hsContent">
-							<h2>Boy, do we have a solution for you!</h2>
-						</div>
-					</div>
-				</div>
-			</section>
+		<section id="kde">
+			<div class="inner">
+				<h1>I contribute to <a href="//kde.org">KDE</a></h1>
+				<p>I maintain <a href="//projects.kde.org/kscreengenie">KScreenGenie</a>, KDE's shiny new screenshot utility</p>
+			</div>
+		</section>
 
-			<section id="slide-5">
-				<div class="bcg">
-					<div class="hsContainer">
-						<div class="hsContent">
-							<h2>Presenting <span id="oldwise">Old Wise<sup><small>TM</small></sup></span>, the world's first white deluxe nourishing hair colour cr&eacute;me. Now at only <span id="price">$899.<sup>99</sup></span>*</h2>
-							<h4>From the makers of Napalm and Gaddafi's Secret Sauce. Winner of multiple Teen Choice Awards. <a href="http://bit.ly/1hobeHL">Buy Now</a> at the low price of just $899.<sup>99</sup>* for a limited time only</h4>
-							<p>*Conditions Apply</p>
-							<p><small>May cause unwanted side effects including extreme extroversion in social situations, excessive religious devotion, increased libido, erectile dysfunction and/or reduced nasal hair. Patent pending in Hawaii. No animals have been harmed in testing (yet)</small></p>
-						</div>
-					</div>
-				</div>
-			</section>
-		</main>
+		<section id="blog">
+			<div class="inner">
+				<h1>I have a <a href="http://blog.boudhayangupta.me/">blog</a>&nbsp;&nbsp; <i class="fa fa-pencil"></i></h1>
+				<p>I hope you love reading as much as I love writing!</p>
+			</div>
+		</section>
 
-		<script src="/js/zepto.min.js"></script>
-		<script src="/js/main.js"></script>
+		<section id="osfy">
+			<div class="inner">
+				<h1>I write for <a href="http://www.opensourceforu.com/author/boudhayan-gupta/">Open Source For You</a></h1>
+				<p>About Linux, Qt, Web Technologies and System Administration. Many more articles are in print</p>
+			</div>
+		</section>
+
+		<section id="social-media">
+			<div class="inner">
+				<h1>Find me elsewhere</h1>
+				<p>/ <a href="//github.com/BaloneyGeek">GitHub</a> / <a href="//google.com/+BoudhayanGupta">Google Plus</a> / <a href="//facebook.com/BaloneyGeek">Facebook</a> / <a href="//in.linkedin.com/in/baloneygeek">LinkedIn</a> /</p>
+			</div>
+		</section>
+
+		<section id="contact">
+			<div class="inner">
+				<h1>Get in touch!</h1>
+				<p>You can get in touch via <a href="//google.com/+BoudhayanGupta">Google Plus</a> or <a href="mailto:mail@boudhayangupta.me">E-Mail</a></p>
+				<p><small>You can also download my <a href="/files/BoudhayanGupta-Resume.pdf">r&eacute;sum&eacute;</a> from <a href="/files/BoudhayanGupta-Resume.pdf">here</a></small></p>
+			</div>
+		</section>
 	</body>
 </html>
